--- a/u3-w2-d2-pt2-componenti-angular/src/app/to-do-list/to-do-list.page.html
+++ b/u3-w2-d2-pt2-componenti-angular/src/app/to-do-list/to-do-list.page.html
@@ -1,1 +1,27 @@
-<p>to-do-list works!</p>
+<div class="row g-3 mb-5">
+  <div class="col-sm">
+    <input type="text" class="form-control" placeholder="Todo..." />
+  </div>
+  <div class="col-sm-2">
+    <button type="button" class="btn btn-dark form-control">Add</button>
+  </div>
+</div>
+<ul class="list-group list-group-flush">
+  <li class="list-group-item" *ngFor="let item of todos; let i = index">
+    <span ngClass="{{item.check}}">{{i+1}} - {{item.text}}</span>
+    <button
+      type="button"
+      class="btn btn-warning btn-sm float-end mx-2"
+      (click)="checkTodo(i)"
+    >
+      -
+    </button>
+    <button
+      type="button"
+      class="btn btn-danger btn-sm float-end mx-2"
+      (click)="removeTodo(i)"
+    >
+      X
+    </button>
+  </li>
+</ul>
